 - Added support for "charset" in the HTTP header field for Content-Type.
 - Added support for progressive display of progressive jpegs.
 - Fixed progressive display of interlaced pngs.
 - Enabled colspan=0 in tables parsing.
 - Fixed a memory leak in cookies.c
 - Added "standard_widget_colors" preference. It allows a more stylish look.
 - Fixed the return value of Cache_parse_multiple_field.
   Patches: place
+- Fixed a problem with locally-installed dpis.
 - Added code for optional image loading (nice interface) very advanced!
 - Added an experimental gzip decoder! 
 - Implemented "Load Images" in the page menu and cleaned up html.hh.
 - Added shortcuts: PgDn=Spc PgUp=b Back=BackSpace|, Forw=Shift+Backspace|.
 - Made a cleanup in cache's parse header code.
   Patch: place, Jorge Arellano Cid
+- Fixed a va_list-related SEGFAULT on 64bit-arch in dStr_vsprintfa().
   Added const declarations in html parser.
   Patch: Vincent Thomasset
+- Fixed void to int conversions for 64bit-arch.
   Patch: Jorge Arellano Cid, higuita
+- Set the url resolver to escape illegal chars instead of stripping.
   Patch: Jorge Arellano Cid, Jeremy Henty
+- Added a strndup() replacement in dw2
   Patch: Alexander Becher, Johannes Hofmann, Jorge Arellano Cid
+- Fixed calcHashValue() to only return non-negative numbers (was SEGFAULT).
 - Improved scrolling performance on large pages by copying screen data
    instead of rendering.
 - Updated configure.in to check only for fltk2-config.
 - Implemented drag-scrolling with the mouse's middle button.
 - Disabled double buffering (good for debugging redraws).
 - Switched dns.c from gethostbyname* to getaddrinfo (& removed libc5 code).
 - Made "New browser window" inherit the panel style of its parent.
 - Made TopGroup a PackedGroup, simplifying UI code and removing workarounds.
 - Added a redraw(DAMAGE_HIGHLIGHT) call to Back, Forw and Stop buttons.
 - Fixed a segfault bug when closing a bw under active networking.
   Patches: Johannes Hofmann